--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <p>Day 1 CodeWorks</p>
+    <ul>
+        <li>GIT</li>
+        <li>Node</li>
+        <li>npm - node package manager</li>
+        <li>http-server</li>
+        <li>VSCode</li>
+        <li>Setup source directory</li>
+    </ul>
 </body>
 </html>
