--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><b>GIT</b> is a distributed peer-peer version control system. Git saves every repository locally.</li>
         <li><b>Node</b> is a platform built on javascripts runtime for building fast and scalable networks applications.</li>
         <li><b>npm - node package manager</b> is an online repository for publishing your own open source node.js. It is also a command line utility for interacting with your published repository.</li>
-        <li><b>>http-server</b> is a prompt in the command box that allows you to turn your server on or off.</li>
+        <li><b>http-server</b> is a prompt in the command box that allows you to turn your server on or off.</li>
         <li><b>VSCode</b> is a source code text editor based on Electron and developed by microsoft. </li>
         <li><b>Setup source directory</b>was a step by step process through CMD that allowed us to create and navigate a directory.</li>
     </ul>
